Fixed card wrapping

--- a/ezeatz/src/App.css
+++ b/ezeatz/src/App.css
@@ -16,3 +16,8 @@
 .App-link {
   color: #09d3ac;
 }
+
+.MainPage {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
