--- a/ezeatz/src/mainpage/Cards/CardContainer.css
+++ b/ezeatz/src/mainpage/Cards/CardContainer.css
@@ -1,4 +1,4 @@
-.CardContainer {
+/*.CardContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
+}*/
